# cargo-minify

./: .gitignore  Cargo.toml  README.md
src/: main.rs  symbol_collect_visitor.rs
